welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: '<-' expected but integer literal found.
for (nbpas 0 to 7){
           ^Runner:9: error: illegal start of simple expression
	}
        ^